[package]
name = "image-processing"
version = "0.1.0"
authors = ["Moritz Jung <m.projects.code@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.25.6"
imageproc = "0.25.0"
web-sys = { version = "0.3.77", features = ["OffscreenCanvasRenderingContext2d", "ImageData", "Document", "Element", "HtmlCanvasElement", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false