[package]
name = "image-processing"
version = "0.1.0"
authors = ["Moritz Jung <m.projects.code@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.101"
console_error_panic_hook = { version = "0.1.7", optional = true }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = { version = "0.25.0", default-features = false }
web-sys = { version = "0.3.77", features = ["OffscreenCanvasRenderingContext2d", "ImageData", "Document", "Element", "HtmlCanvasElement", "Window"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex_color = "3.0.0"
tsify = { version = "0.5.5", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3               # Highest level of optimization.
lto = "fat"                 # Enable link-time optimization.
overflow-checks = false     # Disable integer overflow checks.
incremental = true          # Enable incremental compilation for faster builds.

[package.metadata.wasm-pack.profile.release]
wasm-opt = false            # Disable wasm-opt, because it's very slow.
